update file terbaru

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>Git Testing</h1>
+    <h1>Git Testing yang baru</h1>
+
+    <h2>Ada fungsi baru</h2>
 </body>
 </html>
